@@ -452,7 +452,7 @@
 		<p class="tx-srfeuserregister-pi1-error">###EVAL_ERROR_FIELD_captcha_response###</p>
 		<!-- ###SUB_ERROR_FIELD_captcha_response### -->
 		<input type="text" size="15" id="tx-srfeuserregister-pi1-captcha-response" name="###NAME_CAPTCHA_RESPONSE###" title="###SR_FREECAP_NOTICE###" value="">
-		###SR_FREECAP_IMAGE###
+		###SR_FREECAP_IMAGE######CAPTCHA_IMAGE###
 	</dd>
 	<!--###SUB_INCLUDED_FIELD_captcha_response###-->
 
@@ -1710,7 +1710,7 @@ The user is informed that a message has been sent to the email address and that 
 		<p class="tx-srfeuserregister-pi1-error">###EVAL_ERROR_FIELD_captcha_response###</p>
 		<!-- ###SUB_ERROR_FIELD_captcha_response### -->
 		<input type="text" size="15" id="tx-srfeuserregister-pi1-captcha-response" name="###NAME_CAPTCHA_RESPONSE###" title="###SR_FREECAP_NOTICE###" value="">
-		###SR_FREECAP_IMAGE###
+		###SR_FREECAP_IMAGE######CAPTCHA_IMAGE###
 	</dd>
 	<!--###SUB_INCLUDED_FIELD_captcha_response###-->
 
